--- a/tools/mdtcablelist/CMakeLists.txt
+++ b/tools/mdtcablelist/CMakeLists.txt
@@ -11,6 +11,7 @@ include_directories("${PROJECT_SOURCE_DIR}/src")
 set (HEADER_FILES
           src/mdtClEditor.h
           src/mdtClVehicleTypeEditor.h
+          src/mdtClConnectorEditor.h
           src/mdtClArticleEditor.h
           src/mdtClUnitEditor.h
           src/mdtClLinkEditor.h
@@ -32,6 +33,7 @@ set (SOURCES_FILES
           src/mdtClBase.cpp
           src/mdtClEditor.cpp
           src/mdtClVehicleTypeEditor.cpp
+          src/mdtClConnectorEditor.cpp
           src/mdtClArticleEditor.cpp
           src/mdtClUnit.cpp
           src/mdtClUnitEditor.cpp
@@ -58,6 +60,7 @@ set (SOURCES_FILES
 # Qt ui files
 set (FORM_FILES
           src/mdtClVehicleTypeEditor.ui
+          src/mdtClConnectorEditor.ui
           src/mdtClArticleEditor.ui
           src/mdtClUnitEditor.ui
           src/mdtClUnitConnectionDialog.ui
