Working on cable list tool

--- a/tools/mdtcablelist/CMakeLists.txt
+++ b/tools/mdtcablelist/CMakeLists.txt
@@ -34,6 +34,8 @@ set (SOURCES_FILES
           src/mdtClEditor.cpp
           src/mdtClVehicleTypeEditor.cpp
           src/mdtClConnectorEditor.cpp
+          src/mdtClConnectionData.cpp
+          src/mdtClArticleConnectionData.cpp
           src/mdtClArticleEditor.cpp
           src/mdtClUnit.cpp
           src/mdtClUnitEditor.cpp
