Beginning with cable checker

--- a/tools/mdtcablelist/CMakeLists.txt
+++ b/tools/mdtcablelist/CMakeLists.txt
@@ -25,6 +25,7 @@ set (HEADER_FILES
           src/mdtClArticleLinkDialog.h
           src/mdtClPathGraphDialog.h
           src/mdtClMainWindow.h
+          src/mdtCcTestConnectionCableEditor.h
     )
 
 # Source files
@@ -59,6 +60,8 @@ set (SOURCES_FILES
           src/mdtClPathGraphDialog.cpp
           src/mdtClDatabaseSchema.cpp
           src/mdtClMainWindow.cpp
+          src/mdtCcTestConnectionCable.cpp
+          src/mdtCcTestConnectionCableEditor.cpp
     )
 
 # Qt ui files
