--- a/tools/mdtcablelist/tests/CMakeLists.txt
+++ b/tools/mdtcablelist/tests/CMakeLists.txt
@@ -64,6 +64,7 @@ set (TEST_SOURCES_FILES
           ../src/mdtCcTestConnectionCable.cpp
           ../src/mdtCcTestConnectionCableEditor.cpp
           ../src/mdtTtTestNodeEditor.cpp
+          ../src/mdtTtTestNode.cpp
     )
 
 # Qt ui files
