Working on test tool

--- a/tools/mdtcablelist/CMakeLists.txt
+++ b/tools/mdtcablelist/CMakeLists.txt
@@ -28,6 +28,7 @@ set (HEADER_FILES
           src/mdtCcTestConnectionCableEditor.h
           src/mdtTtTestNodeEditor.h
           src/mdtTtTestEditor.h
+          src/mdtTtTestItemEditor.h
     )
 
 # Source files
@@ -68,6 +69,8 @@ set (SOURCES_FILES
           src/mdtTtTestNode.cpp
           src/mdtTtTestEditor.cpp
           src/mdtTtTest.cpp
+          src/mdtTtTestItemEditor.cpp
+          src/mdtTtTestItem.cpp
     )
 
 # Qt ui files
@@ -88,6 +91,7 @@ set (FORM_FILES
           src/mdtClMainWindow.ui
           src/mdtTtTestNodeEditor.ui
           src/mdtTtTestEditor.ui
+          src/mdtTtTestItemEditor.ui
     )
 
 # Fichiers à traiter par le compilateur moc
