Working on test tool and first step with cable checker

--- a/tools/mdtcablelist/CMakeLists.txt
+++ b/tools/mdtcablelist/CMakeLists.txt
@@ -29,6 +29,8 @@ set (HEADER_FILES
           src/mdtTtTestNodeEditor.h
           src/mdtTtTestEditor.h
           src/mdtTtTestItemEditor.h
+          src/mdtTtCableChecker.h
+          src/mdtTtCableCheckerWindow.h
     )
 
 # Source files
@@ -71,6 +73,9 @@ set (SOURCES_FILES
           src/mdtTtTest.cpp
           src/mdtTtTestItemEditor.cpp
           src/mdtTtTestItem.cpp
+          src/mdtTtTestResult.cpp
+          src/mdtTtCableChecker.cpp
+          src/mdtTtCableCheckerWindow.cpp
     )
 
 # Qt ui files
@@ -92,6 +97,9 @@ set (FORM_FILES
           src/mdtTtTestNodeEditor.ui
           src/mdtTtTestEditor.ui
           src/mdtTtTestItemEditor.ui
+          src/mdtCcTestConnectionCableEditor.ui
+          src/mdtTtCableChecker.ui
+          src/mdtTtCableCheckerWindow.ui
     )
 
 # Fichiers à traiter par le compilateur moc
