Working on validation document (first initial version)

--- a/src/mdttools/CMakeLists.txt
+++ b/src/mdttools/CMakeLists.txt
@@ -1,6 +1,6 @@
 # Project file for Multi Diag Tools
-# * Part: mduttools *
-# * Directory: mduttools *
+# * Part: mdttools *
+# * Directory: mdttools *
 
 # Project
 project (multidiagtools)
